syntax = "proto3";

option csharp_namespace = "AccessService";

service Logon {
  rpc Login (LoginRequest) returns (LoginReply);  
  rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordReply);  
  rpc CheckDbStatus (CheckRequest) returns (CheckReply);
}

message LoginRequest {
  string name = 1;
  string password = 2;
}

message LoginReply {
  bool success = 1;
  string uid = 2;
  string role = 3;
}

message ChangePasswordRequest {
  string name = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message ChangePasswordReply {
  bool success = 1;
}

message CheckRequest {
}

message CheckReply {
  bool success = 1;
}
